--- a/EqUiWebUi/Areas/Maximo_ui/Views/WorkorderDetails/_woParentDetails.cshtml
+++ b/EqUiWebUi/Areas/Maximo_ui/Views/WorkorderDetails/_woParentDetails.cshtml
@@ -23,7 +23,7 @@
         {
             <div class="panel panel-default">
                 <div class="panel-heading">
-                    <h6>WoDetails wo:<strong>@subWo.WONUM</strong>  location:<strong>@subWo.LOCATION</strong>  status:<strong>@subWo.STATUS</strong> (child)</h6>
+                    <h6>WoDetails wo:<strong>@subWo.WONUM</strong>  location:<strong>@subWo.LOCATION</strong>  Ownergroup:<strong>@subWo.OWNERGROUP</strong> status:<strong>@subWo.STATUS</strong> (child)</h6>
                 </div>
 
                 <div class="panel-body">
