--- a/EqUiWebUi/Views/Chart/_getErrorTrend.cshtml
+++ b/EqUiWebUi/Views/Chart/_getErrorTrend.cshtml
@@ -2,7 +2,7 @@
 <div class="panel panel-primary">
     <div class="panel-heading">
         <h4 class="panel-title">
-            Trend for @Model.logtext on @Model.location
+            Trend for location: <strong>@Model.location.Trim()</strong> logcode: <strong>@Model.errornum</strong> logtext: <strong>@Model.logtext.Trim()</strong>
             <a class="glyphicon glyphicon-cog" href="#" data-toggle="popover" data-placement="bottom" id="ErrorTrentCharOptionsPopover"></a>
             <a class="glyphicon glyphicon-calendar" id="ErrorTrentCharDatepicker" href="#"></a>
         </h4>
