--- a/EqUiWebUi/Areas/Gadata/Views/Shared/_Moreinfo.cshtml
+++ b/EqUiWebUi/Areas/Gadata/Views/Shared/_Moreinfo.cshtml
@@ -1,14 +1,26 @@
 ﻿@model EqUiWebUi.Models.LogInfo
 
-<div class="modal-header">
-    <div class="row">
-        <div class="col-sm-11">
-            <h4>Log helper</h4>
-        </div>
-        <div class="col-sm-1">
-            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                <span aria-hidden="true">&times;</span>
-            </button>
+<div class="">
+
+    <div class="alert">
+        <h4>Information about <a class="glyphicon glyphicon-new-window pull-left" href='@Url.Action("MoreInfo","Table",Model)'></a></h4>
+        <div class="row">
+           
+            <div class="col-sm-11">
+                Logtype: <strong>@Model.logtype</strong> for location: <strong>@Model.location</strong>
+                <div class="text-muted">
+                    Logcode: <strong>@Model.errornum</strong> Logtext: <strong>@Model.logtext.Trim()</strong> 
+                </div>
+
+            </div>
+
+            <div class="col-sm-1">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+
+            </div>
+
         </div>
     </div>
 </div>
