more work on vasv ui

--- a/EqUiWebUi/Areas/VASC/Views/vasc/Index.cshtml
+++ b/EqUiWebUi/Areas/VASC/Views/vasc/Index.cshtml
@@ -15,5 +15,9 @@
         <p><a href="~/vasc/c_csv_log/index" class="btn btn-danger btn-sm">c_csv_log &raquo;</a>Manage c_csv_log</p>
         <p><a href="~/vasc/c_device_info/index" class="btn btn-danger btn-sm">c_device_info &raquo;</a>Manage c_device_info</p>
         <p><a href="~/vasc/c_controller_class/index" class="btn btn-danger btn-sm">c_controller_class &raquo;</a>Manage c_controller_class</p>
+        <p><a href="~/vasc/c_variable/index" class="btn btn-danger btn-sm">c_variable &raquo;</a>Manage c_variable</p>
+        <p><a href="~/vasc/c_variable_search/index" class="btn btn-danger btn-sm">c_variable_search &raquo;</a>Manage c_variable_search</p>
+        <p><a href="~/vasc/c_job/index" class="btn btn-danger btn-sm">c_job &raquo;</a>Manage c_job</p>
+        <p><a href="~/vasc/c_controller/index" class="btn btn-danger btn-sm">c_controller &raquo;</a>Manage c_controller</p>
     </div>
 </div>
