--- a/EqUiWebUi/Areas/Gadata/Views/Table/_supervisie.cshtml
+++ b/EqUiWebUi/Areas/Gadata/Views/Table/_supervisie.cshtml
@@ -4,6 +4,7 @@
 {
     columns.Add(c => c.Location).Titled("Location").Filterable(true);
     columns.Add(c => c.logtext).Titled("Logtext").Css("hidden-sm hidden-xs");
+    columns.Add(c => c.RT).Titled("RT");
     columns.Add(c => c.DT).Titled("DT");
     columns.Add(c => c.time).Titled("time");
     columns.Add(c => c.Classification).Titled("Class");
