vasc ui for error no log and c_alarm ignore

--- a/EqUiWebUi/Areas/Gadata/Views/Table/_ploegRapport.cshtml
+++ b/EqUiWebUi/Areas/Gadata/Views/Table/_ploegRapport.cshtml
@@ -3,13 +3,13 @@
 @Html.Grid(Model).Named("PloegRapport").Build(columns =>
 {
     columns.Add(c => c.Location).Titled("Location").Filterable(true);
-    columns.Add(c => c.logtext).Titled("Logtext").Filterable(true).Css("hidden-sm hidden-xs");
+    columns.Add(c => c.logtext).Titled("Logtext").Filterable(true);
     columns.Add(c => c.Response_min_).Titled("RT").Filterable(true);
     columns.Add(c => c.Downtime_min_).Titled("DT").Filterable(true);
     columns.Add(c => c.Count).Titled("Count").Filterable(true);
     columns.Add(c => c.time).Titled("Time");
-    columns.Add(c => c.Subgroup).Titled("Subgroup").Filterable(true);
-    columns.Add(c => c.Logtype).Titled("Logtype").Filterable(true);
+    columns.Add(c => c.Subgroup).Titled("Subgroup").Filterable(true).Css("hidden-sm hidden-xs");
+    columns.Add(c => c.Logtype).Titled("Logtype").Filterable(true).Css("hidden-sm hidden-xs");
     columns.Add(c => c.LocationTree).Filterable(true).Css("hidden");
     columns.Add(c => c.Logcode).Css("hidden");
     columns.Add(c => c.refId).Css("hidden");
