--- a/EqUiWebUi/Areas/Gadata/Views/Table/_supervisie.cshtml
+++ b/EqUiWebUi/Areas/Gadata/Views/Table/_supervisie.cshtml
@@ -3,13 +3,13 @@
 @Html.Grid(Model).Named("Supervisie").Build(columns =>
 {
     columns.Add(c => c.Location).Titled("Location").Filterable(true);
-    columns.Add(c => c.logtext).Titled("Logtext").Css("hidden-sm hidden-xs");
+    columns.Add(c => c.logtext).Titled("Logtext");
     columns.Add(c => c.RT).Titled("RT");
     columns.Add(c => c.DT).Titled("DT");
     columns.Add(c => c.time).Titled("time");
-    columns.Add(c => c.Classification).Titled("Class");
-    columns.Add(c => c.Subgroup).Titled("Subgroup");
-    columns.Add(c => c.Logtype).Titled("LogType").Filterable(true);
+    columns.Add(c => c.Classification).Titled("Class").Css("hidden-sm hidden-xs");
+    columns.Add(c => c.Subgroup).Titled("Subgroup").Css("hidden-sm hidden-xs");
+    columns.Add(c => c.Logtype).Titled("LogType").Css("hidden-sm hidden-xs").Filterable(true);
     columns.Add(c => c.LocationTree).Filterable(true).Css("hidden");
     columns.Add(c => c.Logcode).Css("hidden");
     columns.Add(c => c.refId).Css("hidden");
