--- a/EqUiWebUi/Areas/Maximo_ui/Views/Workorder/_workordersOnLocation.cshtml
+++ b/EqUiWebUi/Areas/Maximo_ui/Views/Workorder/_workordersOnLocation.cshtml
@@ -60,6 +60,7 @@
             "&worktype=@Model.worktype" +
             "&wonum=@Model.wonum" +
             "&status=@Model.status" +
+            "&ownergroup=@Model.ownergroup" +
             "&startdate=@Model.startdate.ToString("yyyy-MM-dd HH:mm:ss")" +
             "&enddate=@Model.enddate.ToString("yyyy-MM-dd HH:mm:ss")" +
             "&RealtimeConn=@Model.realtimeConn"
