--- a/EqUiWebUi/Areas/PlcSupervisie/Views/Screenshot/Carousel.cshtml
+++ b/EqUiWebUi/Areas/PlcSupervisie/Views/Screenshot/Carousel.cshtml
@@ -4,7 +4,7 @@
             <!-- Carousel items -->
             <div class="carousel-inner">
                 <div class="active item" data-slide-number="0">
-                    <img src="http://webapps.gen.volvocars.net/applications/eng/equipment/SuperVisieP1/Framing.jpg" />
+                    <img src="http://webapps.gen.volvocars.net/applications/eng/equipment/SuperVisieCma/VCG_CMA40_GA3SUPERVNCW01__00_Overview_UnderBody_CMA.Pd_.jpg" />
                 </div>
                 <div class="item" data-slide-number="1">
                     <img src="http://webapps.gen.volvocars.net/applications/eng/equipment/SuperVisieCma/VCG_CMA40_GA3SUPERVNCW01__01_UnderBody_1.Pd_.jpg" />
