--- a/EqUiWebUi/Areas/VASC/Views/vasc/Index.cshtml
+++ b/EqUiWebUi/Areas/VASC/Views/vasc/Index.cshtml
@@ -18,6 +18,8 @@
         <p><a href="~/vasc/c_variable/index" class="btn btn-danger btn-sm">c_variable &raquo;</a>Manage c_variable</p>
         <p><a href="~/vasc/c_variable_search/index" class="btn btn-danger btn-sm">c_variable_search &raquo;</a>Manage c_variable_search</p>
         <p><a href="~/vasc/c_job/index" class="btn btn-danger btn-sm">c_job &raquo;</a>Manage c_job</p>
+        <p><a href="~/vasc/c_alarm_ignore/index" class="btn btn-danger btn-sm">c_alarm_ignore &raquo;</a>Manage c_alarm_ignore</p>
+        <p><a href="~/vasc/c_error_no_log/index" class="btn btn-danger btn-sm">c_error_no_log &raquo;</a>Manage c_error_no_log</p>
         <p><a href="~/vasc/c_controller/index" class="btn btn-danger btn-sm">c_controller &raquo;</a>Manage c_controller</p>
     </div>
 </div>
