--- a/EqUiWebUi/Areas/Maximo_ui/Views/Workorder/Workorders.cshtml
+++ b/EqUiWebUi/Areas/Maximo_ui/Views/Workorder/Workorders.cshtml
@@ -15,99 +15,107 @@
             @Html.ValidationSummary(true, "", new { @class = "text-danger" })
             <form class="form-horizontal">
                 <fieldset>
-                        <div class="form-group">
-                            <label class="control-label col-md-3" for="startdate">Daterange</label>
-                            <div class="col-md-9">
-                                <input class="form-control input-md" id="daterange" name="daterange" type="text">
-                            </div>
+                    <div class="form-group">
+                        <label class="control-label col-md-3" for="startdate">Daterange</label>
+                        <div class="col-md-9">
+                            <input class="form-control input-md" id="daterange" name="daterange" type="text">
                         </div>
+                    </div>
 
-                        <div class="form-group hidden">
-                            @Html.LabelFor(m => m.enddate, new { @class = "control-label col-md-3" })
-                            <div class="col-md-9">
-                                @Html.TextBoxFor(m => m.enddate, new { @class = "form-control input-md" })
-                                @Html.ValidationMessageFor(m => m.enddate, "", new { @class = "text-danger" })
-                                <span class="help-block">changedate < than </span>
-                            </div>
+                    <div class="form-group hidden">
+                        @Html.LabelFor(m => m.enddate, new { @class = "control-label col-md-3" })
+                        <div class="col-md-9">
+                            @Html.TextBoxFor(m => m.enddate, new { @class = "form-control input-md" })
+                            @Html.ValidationMessageFor(m => m.enddate, "", new { @class = "text-danger" })
+                            <span class="help-block">changedate < than </span>
                         </div>
+                    </div>
 
-                        <div class="form-group hidden">
-                            @Html.LabelFor(m => m.startdate, new { @class = "control-label col-md-3" })
-                            <div class="col-md-9">
-                                @Html.TextBoxFor(m => m.startdate, new { @class = "form-control input-md" })
-                                @Html.ValidationMessageFor(m => m.startdate, "", new { @class = "text-danger" })
-                                <span class="help-block">changedate > than</span>
-                            </div>
+                    <div class="form-group hidden">
+                        @Html.LabelFor(m => m.startdate, new { @class = "control-label col-md-3" })
+                        <div class="col-md-9">
+                            @Html.TextBoxFor(m => m.startdate, new { @class = "form-control input-md" })
+                            @Html.ValidationMessageFor(m => m.startdate, "", new { @class = "text-danger" })
+                            <span class="help-block">changedate > than</span>
                         </div>
+                    </div>
 
-                        <div class="form-group">
-                            @Html.LabelFor(m => m.location, new { @class = "control-label col-md-3" })
-                            <div class="col-md-9">
-                                @Html.TextBoxFor(m => m.location, new { @class = "form-control input-md" })
-                                @Html.ValidationMessageFor(m => m.location, "", new { @class = "text-danger" })
-                            </div>
+                    <div class="form-group">
+                        @Html.LabelFor(m => m.location, new { @class = "control-label col-md-3" })
+                        <div class="col-md-9">
+                            @Html.TextBoxFor(m => m.location, new { @class = "form-control input-md" })
+                            @Html.ValidationMessageFor(m => m.location, "", new { @class = "text-danger" })
                         </div>
+                    </div>
 
-                        <div class="form-group">
-                            @Html.LabelFor(m => m.locancestor, new { @class = "control-label col-md-3" })
-                            <div class="col-md-9">
-                                @Html.TextBoxFor(m => m.locancestor, new { @class = "form-control input-md" })
-                                @Html.ValidationMessageFor(m => m.locancestor, "", new { @class = "text-danger" })
-                            </div>
+                    <div class="form-group">
+                        @Html.LabelFor(m => m.locancestor, new { @class = "control-label col-md-3" })
+                        <div class="col-md-9">
+                            @Html.TextBoxFor(m => m.locancestor, new { @class = "form-control input-md" })
+                            @Html.ValidationMessageFor(m => m.locancestor, "", new { @class = "text-danger" })
                         </div>
+                    </div>
 
-                        <div class="form-group">
-                            @Html.LabelFor(m => m.jpnum, new { @class = "control-label col-md-3" })
-                            <div class="col-md-9">
-                                @Html.TextBoxFor(m => m.jpnum, new { @class = "form-control input-md" })
-                                @Html.ValidationMessageFor(m => m.jpnum, "", new { @class = "text-danger" })
-                            </div>
+                    <div class="form-group">
+                        @Html.LabelFor(m => m.jpnum, new { @class = "control-label col-md-3" })
+                        <div class="col-md-9">
+                            @Html.TextBoxFor(m => m.jpnum, new { @class = "form-control input-md" })
+                            @Html.ValidationMessageFor(m => m.jpnum, "", new { @class = "text-danger" })
                         </div>
+                    </div>
 
-                        <div class="form-group">
-                            @Html.LabelFor(m => m.worktype, new { @class = "control-label col-md-3" })
-                            <div class="col-md-9">
-                                @Html.TextBoxFor(m => m.worktype, new { @class = "form-control input-md" })
-                                @Html.ValidationMessageFor(m => m.worktype, "", new { @class = "text-danger" })
-                            </div>
+                    <div class="form-group">
+                        @Html.LabelFor(m => m.worktype, new { @class = "control-label col-md-3" })
+                        <div class="col-md-9">
+                            @Html.TextBoxFor(m => m.worktype, new { @class = "form-control input-md" })
+                            @Html.ValidationMessageFor(m => m.worktype, "", new { @class = "text-danger" })
                         </div>
+                    </div>
 
-                        <div class="form-group">
-                            @Html.LabelFor(m => m.wonum, new { @class = "control-label col-md-3" })
-                            <div class="col-md-9">
-                                @Html.TextBoxFor(m => m.wonum, new { @class = "form-control input-md" })
-                                @Html.ValidationMessageFor(m => m.wonum, "", new { @class = "text-danger" })
-                            </div>
+                    <div class="form-group">
+                        @Html.LabelFor(m => m.wonum, new { @class = "control-label col-md-3" })
+                        <div class="col-md-9">
+                            @Html.TextBoxFor(m => m.wonum, new { @class = "form-control input-md" })
+                            @Html.ValidationMessageFor(m => m.wonum, "", new { @class = "text-danger" })
                         </div>
+                    </div>
 
-                        <div class="form-group">
-                            @Html.LabelFor(m => m.status, new { @class = "control-label col-md-3" })
-                            <div class="col-md-9">
-                                @Html.TextBoxFor(m => m.status, new { @class = "form-control input-md" })
-                                @Html.ValidationMessageFor(m => m.status, "", new { @class = "text-danger" })
-                            </div>
+                    <div class="form-group">
+                        @Html.LabelFor(m => m.status, new { @class = "control-label col-md-3" })
+                        <div class="col-md-9">
+                            @Html.TextBoxFor(m => m.status, new { @class = "form-control input-md" })
+                            @Html.ValidationMessageFor(m => m.status, "", new { @class = "text-danger" })
                         </div>
+                    </div>
 
-                        <div class="form-group">
-                            @Html.LabelFor(m => m.b_ciblings, new { @class = "control-label col-md-6" })
-                            <div class="col-md-6">
-                                @Html.CheckBoxFor(m => m.b_ciblings, new { @class = "form-control input-ld" })
-                            </div>
+                    <div class="form-group">
+                        @Html.LabelFor(m => m.ownergroup, new { @class = "control-label col-md-3" })
+                        <div class="col-md-9">
+                            @Html.TextBoxFor(m => m.ownergroup, new { @class = "form-control input-md" })
+                            @Html.ValidationMessageFor(m => m.ownergroup, "", new { @class = "text-danger" })
                         </div>
+                    </div>
 
-                        <div class="form-group">
-                            @Html.LabelFor(m => m.b_preventive, new { @class = "control-label col-md-6" })
-                            <div class="col-md-6">
-                                @Html.CheckBoxFor(m => m.b_preventive, new { @class = "form-control input-md" })
-                            </div>
+                    <div class="form-group">
+                        @Html.LabelFor(m => m.b_ciblings, new { @class = "control-label col-md-6" })
+                        <div class="col-md-6">
+                            @Html.CheckBoxFor(m => m.b_ciblings, new { @class = "form-control input-ld" })
                         </div>
+                    </div>
 
-                        <div class="form-group">
-                            @Html.LabelFor(m => m.realtimeConn, new { @class = "control-label col-md-6" })
-                            <div class="col-md-6">
-                                @Html.CheckBoxFor(m => m.realtimeConn, new { @class = "form-control input-md" })
-                            </div>
+                    <div class="form-group">
+                        @Html.LabelFor(m => m.b_preventive, new { @class = "control-label col-md-6" })
+                        <div class="col-md-6">
+                            @Html.CheckBoxFor(m => m.b_preventive, new { @class = "form-control input-md" })
                         </div>
+                    </div>
+
+                    <div class="form-group">
+                        @Html.LabelFor(m => m.realtimeConn, new { @class = "control-label col-md-6" })
+                        <div class="col-md-6">
+                            @Html.CheckBoxFor(m => m.realtimeConn, new { @class = "form-control input-md" })
+                        </div>
+                    </div>
 
                     <hr />
                     <input type="submit" value="Load workorders" id="WorkorderSelectOptionsSubmit" class="btn btn-success">
