--- a/EqUiWebUi/Views/Home/Index.cshtml
+++ b/EqUiWebUi/Views/Home/Index.cshtml
@@ -23,11 +23,19 @@
         </p>
 
         @{
-            string url = @Uri.EscapeDataString("http://webapps.gen.volvocars.net/applications/eng/equipment/supervisiep1/intranet");
-            <p>
-                <a href="~/Home/Rendersite?url=@url" class="btn btn-primary btn-sm">Supervisie Intranet P1 &raquo;</a>
-                Supervisie (intranet)
-            </p>
+        string urlIntranetSupervis = @Uri.EscapeDataString("http://webapps.gen.volvocars.net/applications/eng/equipment/supervisiep1/intranet");
+        <p>
+            <a href="~/Home/Rendersite?url=@urlIntranetSupervis" class="btn btn-primary btn-sm">Supervisie Intranet P1 &raquo;</a>
+            Supervisie (intranet)
+        </p>
+        }
+
+        @{
+        string urlSTWrap = @Uri.EscapeDataString("http://biwebreports.got.volvocars.net:8080/reports/vcg/VCG_Manufacturing_And_Supply_Chain/Manufacturing/Disturbances_And_Maintenance/Storingslijst%20GA%20-%20Laatste%20productiedag.xlsx");
+        <p>
+            <a href="~/Home/Rendersite?url=@urlSTWrap" class="btn btn-primary btn-sm">STW040 laatste dag&raquo;</a>
+            xls stw040 laatste dag
+        </p>
         }
 
     </div>
