--- a/EqUiWebUi/Views/Shared/_Layout.cshtml
+++ b/EqUiWebUi/Views/Shared/_Layout.cshtml
@@ -27,8 +27,15 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
 
-                    <li><a href="https://sharepoint.volvocars.net/sites/maintenance_a_shop/Lists/Whiteboard%20Issues/AllItems.aspx">Sharepoint</a></li>
-                    <li><a href="https://mysite.volvocars.net/:o:/r/personal/ldebuck2_volvocars_com/Documents/Notebooks/9h%20meeting?d=w586803fbf1694a8da233cc3ea65a12c8&amp;e=5%3A23ae5acd21854d77941a15f2e5d04225">Onenote</a></li>
+                    <li class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Shortcuts <span class="caret"></span></a>
+                        <ul class="dropdown-menu" role="menu">
+                            <li><a href="https://sharepoint.volvocars.net/sites/maintenance_a_shop/Lists/Whiteboard%20Issues/AllItems.aspx">Sharepoint</a></li>
+                            <li class="divider"></li>
+                            <li><a href="https://mysite.volvocars.net/:o:/r/personal/ldebuck2_volvocars_com/Documents/Notebooks/9h%20meeting?d=w586803fbf1694a8da233cc3ea65a12c8&amp;e=5%3A23ae5acd21854d77941a15f2e5d04225">Onenote</a></li>
+                        </ul>
+                    </li>
+                   
                     <li>@Html.ActionLink("About", "About", "Home", new { area = "" }, null)</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home", new { area = "" }, null)</li>
 
