--- a/EqUiWebUi/Areas/VASC/Views/c_variable/_List.cshtml
+++ b/EqUiWebUi/Areas/VASC/Views/c_variable/_List.cshtml
@@ -1,11 +1,11 @@
-﻿@model IQueryable<EqUiWebUi.Areas.VASC.Models.c_variable>
+﻿@model List<EqUiWebUi.Areas.VASC.Models.c_variable>
 
 @Html.Grid(Model).Named("c_variable").Build(columns =>
 {
     columns.Add(c => c.id).Titled("id").InitialSort(GridSortOrder.Asc);
     columns.Add(c => c.variable).Titled("variable");
-    columns.Add(c => c._Enable_bit).Titled("_Enable_bit");
- //   columns.Add(c => c._Insert_update).Titled("_Insert_update");
+    columns.Add(c => c._SQL_Action).Titled("_SQL_Action");
+    columns.Add(c => c._Event_code).Titled("_Event_code");
     columns.Add(c => c.rt_table).Titled("rt_table");
     columns.Add(c => c)
                     .Titled("")
