VASC UI ... cleanout

--- a/EqUiWebUi/Areas/VASC/Views/c_controller_class/Index.cshtml
+++ b/EqUiWebUi/Areas/VASC/Views/c_controller_class/Index.cshtml
@@ -34,12 +34,14 @@
                     ).Filterable(false);
 }).Filterable(true).Sortable(true).Empty("Did not find anything").Css("table-hover")
 
+<hr />
 
-<div class="panel">
-    <div class="panel-body">
-        <div id="c_controller_classDetails"></div>
+    <div class=" modal-body">
+        <div class="modal-content">
+            <div class="alert alert-info">More info about the selected controller class</div>
+            <div id="c_controller_classDetails">Click on a controller class to see what is configured</div>
+        </div>
     </div>
-</div>
 
 
 @section scripts{
