--- a/EqUiWebUi/Areas/VASC/Views/c_csv_log/_List.cshtml
+++ b/EqUiWebUi/Areas/VASC/Views/c_csv_log/_List.cshtml
@@ -8,6 +8,7 @@
     columns.Add(c => c.csv_filename).Titled("csv_filename");
     columns.Add(c => c.rt_table).Titled("rt_table");
     columns.Add(c => c._Poll_Rate).Titled("Poll_Rate");
+    columns.Add(c => c._Csv_log_Flags).Titled("flags");
     columns.Add(c => c.comment).Titled("comment");
     columns.Add(c => c)
                     .Titled("")
