--- a/EqUiWebUi/Areas/VASC/Views/c_controller_class/Edit.cshtml
+++ b/EqUiWebUi/Areas/VASC/Views/c_controller_class/Edit.cshtml
@@ -93,7 +93,7 @@
             <div class="form-group">
                 @Html.LabelFor(model => model.evStateChange, htmlAttributes: new { @class = "control-label col-md-4" })
                 <div class="col-md-8">
-                    @Html.ListBoxFor(model => model._evStateChange, Model._SQL_Action, new { @class = "form-control bsMultiselect", multiple = "multiple" })
+                    @Html.ListBoxFor(model => model._evStateChange, EqUiWebUi.Areas.VASC.Models.VASCenums.SQL_Action_SelectList, new { @class = "form-control bsMultiselect", multiple = "multiple" })
                     @Html.ValidationMessageFor(model => model.evStateChange, "", new { @class = "text-danger" })
                 </div>
             </div>
@@ -101,7 +101,7 @@
             <div class="form-group">
                 @Html.LabelFor(model => model.evOperatingModeChange, htmlAttributes: new { @class = "control-label col-md-4" })
                 <div class="col-md-8">
-                    @Html.ListBoxFor(model => model._evOperatingModeChange, Model._SQL_Action, new { @class = "form-control bsMultiselect", multiple = "multiple" })
+                    @Html.ListBoxFor(model => model._evOperatingModeChange, EqUiWebUi.Areas.VASC.Models.VASCenums.SQL_Action_SelectList, new { @class = "form-control bsMultiselect", multiple = "multiple" })
                     @Html.ValidationMessageFor(model => model.evOperatingModeChange, "", new { @class = "text-danger" })
                 </div>
             </div>
@@ -109,7 +109,7 @@
             <div class="form-group">
                 @Html.LabelFor(model => model.evConnectionChange, htmlAttributes: new { @class = "control-label col-md-4" })
                 <div class="col-md-8">
-                    @Html.ListBoxFor(model => model._evConnectionChange, Model._SQL_Action, new { @class = "form-control bsMultiselect", multiple = "multiple" })
+                    @Html.ListBoxFor(model => model._evConnectionChange, EqUiWebUi.Areas.VASC.Models.VASCenums.SQL_Action_SelectList, new { @class = "form-control bsMultiselect", multiple = "multiple" })
                     @Html.ValidationMessageFor(model => model.evConnectionChange, "", new { @class = "text-danger" })
                 </div>
             </div>
@@ -117,7 +117,7 @@
             <div class="form-group">
                 @Html.LabelFor(model => model.evExecutionStatus, htmlAttributes: new { @class = "control-label col-md-4" })
                 <div class="col-md-8">
-                    @Html.ListBoxFor(model => model._evExecutionStatus, Model._SQL_Action, new { @class = "form-control bsMultiselect", multiple = "multiple" })
+                    @Html.ListBoxFor(model => model._evExecutionStatus, EqUiWebUi.Areas.VASC.Models.VASCenums.SQL_Action_SelectList, new { @class = "form-control bsMultiselect", multiple = "multiple" })
                     @Html.ValidationMessageFor(model => model.evExecutionStatus, "", new { @class = "text-danger" })
                 </div>
             </div>
@@ -125,7 +125,7 @@
             <div class="form-group">
                 @Html.LabelFor(model => model.evExecutionStatusTRob1, htmlAttributes: new { @class = "control-label col-md-4" })
                 <div class="col-md-8">
-                    @Html.ListBoxFor(model => model._evExecutionStatusTRob1, Model._SQL_Action, new { @class = "form-control bsMultiselect", multiple = "multiple" })
+                    @Html.ListBoxFor(model => model._evExecutionStatusTRob1, EqUiWebUi.Areas.VASC.Models.VASCenums.SQL_Action_SelectList, new { @class = "form-control bsMultiselect", multiple = "multiple" })
                     @Html.ValidationMessageFor(model => model.evExecutionStatusTRob1, "", new { @class = "text-danger" })
                 </div>
             </div>
@@ -133,7 +133,7 @@
             <div class="form-group">
                 @Html.LabelFor(model => model.evBackupCompleted, htmlAttributes: new { @class = "control-label col-md-4" })
                 <div class="col-md-8">
-                    @Html.ListBoxFor(model => model._evBackupCompleted, Model._SQL_Action, new { @class = "form-control bsMultiselect", multiple = "multiple" })
+                    @Html.ListBoxFor(model => model._evBackupCompleted, EqUiWebUi.Areas.VASC.Models.VASCenums.SQL_Action_SelectList, new { @class = "form-control bsMultiselect", multiple = "multiple" })
                     @Html.ValidationMessageFor(model => model.evBackupCompleted, "", new { @class = "text-danger" })
                 </div>
             </div>
@@ -141,7 +141,7 @@
             <div class="form-group">
                 @Html.LabelFor(model => model.evDataResolveChange, htmlAttributes: new { @class = "control-label col-md-4" })
                 <div class="col-md-8">
-                    @Html.ListBoxFor(model => model._evDataResolveChange, Model._SQL_Action, new { @class = "form-control bsMultiselect", multiple = "multiple" })
+                    @Html.ListBoxFor(model => model._evDataResolveChange, EqUiWebUi.Areas.VASC.Models.VASCenums.SQL_Action_SelectList, new { @class = "form-control bsMultiselect", multiple = "multiple" })
                     @Html.ValidationMessageFor(model => model.evDataResolveChange, "", new { @class = "text-danger" })
                 </div>
             </div>
@@ -149,7 +149,7 @@
             <div class="form-group">
                 @Html.LabelFor(model => model.evExecutionCycleChange, htmlAttributes: new { @class = "control-label col-md-4" })
                 <div class="col-md-8">
-                    @Html.ListBoxFor(model => model._evExecutionCycleChange, Model._SQL_Action, new { @class = "form-control bsMultiselect", multiple = "multiple" })
+                    @Html.ListBoxFor(model => model._evExecutionCycleChange, EqUiWebUi.Areas.VASC.Models.VASCenums.SQL_Action_SelectList, new { @class = "form-control bsMultiselect", multiple = "multiple" })
                     @Html.ValidationMessageFor(model => model.evExecutionCycleChange, "", new { @class = "text-danger" })
                 </div>
             </div>
@@ -157,7 +157,7 @@
             <div class="form-group">
                 @Html.LabelFor(model => model.evTaskEnabledChange, htmlAttributes: new { @class = "control-label col-md-4" })
                 <div class="col-md-8">
-                    @Html.ListBoxFor(model => model._evTaskEnabledChange, Model._SQL_Action, new { @class = "form-control bsMultiselect", multiple = "multiple" })
+                    @Html.ListBoxFor(model => model._evTaskEnabledChange, EqUiWebUi.Areas.VASC.Models.VASCenums.SQL_Action_SelectList, new { @class = "form-control bsMultiselect", multiple = "multiple" })
                     @Html.ValidationMessageFor(model => model.evTaskEnabledChange, "", new { @class = "text-danger" })
                 </div>
             </div>
@@ -165,7 +165,7 @@
             <div class="form-group">
                 @Html.LabelFor(model => model.evMasterChange, htmlAttributes: new { @class = "control-label col-md-4" })
                 <div class="col-md-8">
-                    @Html.ListBoxFor(model => model._evMasterChange, Model._SQL_Action, new { @class = "form-control bsMultiselect", multiple = "multiple" })
+                    @Html.ListBoxFor(model => model._evMasterChange, EqUiWebUi.Areas.VASC.Models.VASCenums.SQL_Action_SelectList, new { @class = "form-control bsMultiselect", multiple = "multiple" })
                     @Html.ValidationMessageFor(model => model.evMasterChange, "", new { @class = "text-danger" })
                 </div>
             </div>
@@ -173,7 +173,7 @@
             <div class="form-group">
                 @Html.LabelFor(model => model.evMotionPointerTRob1Change, htmlAttributes: new { @class = "control-label col-md-4" })
                 <div class="col-md-8">
-                    @Html.ListBoxFor(model => model._evMotionPointerTRob1Change, Model._SQL_Action, new { @class = "form-control bsMultiselect", multiple = "multiple" })
+                    @Html.ListBoxFor(model => model._evMotionPointerTRob1Change, EqUiWebUi.Areas.VASC.Models.VASCenums.SQL_Action_SelectList, new { @class = "form-control bsMultiselect", multiple = "multiple" })
                     @Html.ValidationMessageFor(model => model.evMotionPointerTRob1Change, "", new { @class = "text-danger" })
                 </div>
             </div>
@@ -181,7 +181,7 @@
             <div class="form-group">
                 @Html.LabelFor(model => model.evProgramPointerTRob1Change, htmlAttributes: new { @class = "control-label col-md-4" })
                 <div class="col-md-8">
-                    @Html.ListBoxFor(model => model._evProgramPointerTrob1Change, Model._SQL_Action, new { @class = "form-control bsMultiselect", multiple = "multiple" })
+                    @Html.ListBoxFor(model => model._evProgramPointerTrob1Change, EqUiWebUi.Areas.VASC.Models.VASCenums.SQL_Action_SelectList, new { @class = "form-control bsMultiselect", multiple = "multiple" })
                     @Html.ValidationMessageFor(model => model.evProgramPointerTRob1Change, "", new { @class = "text-danger" })
                 </div>
             </div>
@@ -189,7 +189,7 @@
             <div class="form-group">
                 @Html.LabelFor(model => model.evMotionPointerTRob1ManualChange, htmlAttributes: new { @class = "control-label col-md-4" })
                 <div class="col-md-8">
-                    @Html.ListBoxFor(model => model._evMotionPointerTrob1ManualChange, Model._SQL_Action, new { @class = "form-control bsMultiselect", multiple = "multiple" })
+                    @Html.ListBoxFor(model => model._evMotionPointerTrob1ManualChange, EqUiWebUi.Areas.VASC.Models.VASCenums.SQL_Action_SelectList, new { @class = "form-control bsMultiselect", multiple = "multiple" })
                     @Html.ValidationMessageFor(model => model.evMotionPointerTRob1ManualChange, "", new { @class = "text-danger" })
                 </div>
             </div>
@@ -197,7 +197,7 @@
             <div class="form-group">
                 @Html.LabelFor(model => model.evProgramPointerTRob1ManualChange, htmlAttributes: new { @class = "control-label col-md-4" })
                 <div class="col-md-8">
-                    @Html.ListBoxFor(model => model._evProgramPointerTrob1ManualChange, Model._SQL_Action, new { @class = "form-control bsMultiselect", multiple = "multiple" })
+                    @Html.ListBoxFor(model => model._evProgramPointerTrob1ManualChange, EqUiWebUi.Areas.VASC.Models.VASCenums.SQL_Action_SelectList, new { @class = "form-control bsMultiselect", multiple = "multiple" })
                     @Html.ValidationMessageFor(model => model.evProgramPointerTRob1ManualChange, "", new { @class = "text-danger" })
                 </div>
             </div>
@@ -215,7 +215,7 @@
             <div class="form-group">
                 @Html.LabelFor(model => model.cVariableMask, htmlAttributes: new { @class = "control-label col-md-4" })
                 <div class="col-md-8">
-                    @Html.ListBoxFor(model => model._cVariableMask, Model._Enable_bit_MASK, new { @class = "form-control bsMultiselect", multiple = "multiple" })
+                    @Html.ListBoxFor(model => model._cVariableMask, EqUiWebUi.Areas.VASC.Models.VASCenums.Enable_bit_MASK_SelectList, new { @class = "form-control bsMultiselect", multiple = "multiple" })
                     @Html.ValidationMessageFor(model => model.cVariableMask, "", new { @class = "text-danger" })
                 </div>
             </div>
@@ -225,7 +225,7 @@
             <div class="form-group">
                 @Html.LabelFor(model => model.cVariableMask, htmlAttributes: new { @class = "control-label col-md-4" })
                 <div class="col-md-8">
-                    @Html.ListBoxFor(model => model._cVariableMask, Model._Enable_bit_MASK, new { @class = "form-control bsMultiselect", multiple = "multiple" })
+                    @Html.ListBoxFor(model => model._cVariableMask, EqUiWebUi.Areas.VASC.Models.VASCenums.Enable_bit_MASK_SelectList, new { @class = "form-control bsMultiselect", multiple = "multiple" })
                     @Html.ValidationMessageFor(model => model.cVariableMask, "", new { @class = "text-danger" })
                 </div>
             </div>
@@ -233,7 +233,7 @@
             <div class="form-group">
                 @Html.LabelFor(model => model.cVariableSearchMask, htmlAttributes: new { @class = "control-label col-md-4" })
                 <div class="col-md-8">
-                    @Html.ListBoxFor(model => model._cVariableSearchMask, Model._Enable_bit_MASK, new { @class = "form-control bsMultiselect", multiple = "multiple" })
+                    @Html.ListBoxFor(model => model._cVariableSearchMask, EqUiWebUi.Areas.VASC.Models.VASCenums.Enable_bit_MASK_SelectList, new { @class = "form-control bsMultiselect", multiple = "multiple" })
                     @Html.ValidationMessageFor(model => model.cVariableSearchMask, "", new { @class = "text-danger" })
                 </div>
             </div>
@@ -241,7 +241,7 @@
             <div class="form-group">
                 @Html.LabelFor(model => model.cDeviceInfoMask, htmlAttributes: new { @class = "control-label col-md-4" })
                 <div class="col-md-8">
-                    @Html.ListBoxFor(model => model._cDeviceInfoMask, Model._Enable_bit_MASK, new { @class = "form-control bsMultiselect", multiple = "multiple" })
+                    @Html.ListBoxFor(model => model._cDeviceInfoMask, EqUiWebUi.Areas.VASC.Models.VASCenums.Enable_bit_MASK_SelectList, new { @class = "form-control bsMultiselect", multiple = "multiple" })
                     @Html.ValidationMessageFor(model => model.cDeviceInfoMask, "", new { @class = "text-danger" })
                 </div>
             </div>
@@ -249,7 +249,7 @@
             <div class="form-group">
                 @Html.LabelFor(model => model.cCSVLogMask, htmlAttributes: new { @class = "control-label col-md-4" })
                 <div class="col-md-8">
-                    @Html.ListBoxFor(model => model._cCSVLogMask, Model._Enable_bit_MASK, new { @class = "form-control bsMultiselect", multiple = "multiple" })
+                    @Html.ListBoxFor(model => model._cCSVLogMask, EqUiWebUi.Areas.VASC.Models.VASCenums.Enable_bit_MASK_SelectList, new { @class = "form-control bsMultiselect", multiple = "multiple" })
                     @Html.ValidationMessageFor(model => model.cCSVLogMask, "", new { @class = "text-danger" })
                 </div>
             </div>
@@ -257,7 +257,7 @@
             <div class="form-group">
                 @Html.LabelFor(model => model.cJobMask, htmlAttributes: new { @class = "control-label col-md-4" })
                 <div class="col-md-8">
-                    @Html.ListBoxFor(model => model._cJobMask, Model._Enable_bit_MASK, new { @class = "form-control bsMultiselect", multiple = "multiple" })
+                    @Html.ListBoxFor(model => model._cJobMask, EqUiWebUi.Areas.VASC.Models.VASCenums.Enable_bit_MASK_SelectList, new { @class = "form-control bsMultiselect", multiple = "multiple" })
                     @Html.ValidationMessageFor(model => model.cJobMask, "", new { @class = "text-danger" })
                 </div>
             </div>
@@ -283,7 +283,7 @@
             <div class="form-group">
                 @Html.LabelFor(model => model.cPJVEventMask, htmlAttributes: new { @class = "control-label col-md-4" })
                 <div class="col-md-8">
-                    @Html.ListBoxFor(model => model._cPJVEventMask, Model._Enable_bit_MASK, new { @class = "form-control bsMultiselect", multiple = "multiple" })
+                    @Html.ListBoxFor(model => model._cPJVEventMask, EqUiWebUi.Areas.VASC.Models.VASCenums.Enable_bit_MASK_SelectList, new { @class = "form-control bsMultiselect", multiple = "multiple" })
                     @Html.ValidationMessageFor(model => model.cPJVEventMask, "", new { @class = "text-danger" })
                 </div>
             </div>
@@ -291,7 +291,7 @@
             <div class="form-group">
                 @Html.LabelFor(model => model.cErrorNoLogMask, htmlAttributes: new { @class = "control-label col-md-4" })
                 <div class="col-md-8">
-                    @Html.ListBoxFor(model => model._cErrorNoLogMask, Model._Enable_bit_MASK, new { @class = "form-control bsMultiselect", multiple = "multiple" })
+                    @Html.ListBoxFor(model => model._cErrorNoLogMask, EqUiWebUi.Areas.VASC.Models.VASCenums.Enable_bit_MASK_SelectList, new { @class = "form-control bsMultiselect", multiple = "multiple" })
                     @Html.ValidationMessageFor(model => model.cErrorNoLogMask, "", new { @class = "text-danger" })
                 </div>
             </div>
@@ -299,7 +299,7 @@
             <div class="form-group">
                 @Html.LabelFor(model => model.cAlarmIgnoreMask, htmlAttributes: new { @class = "control-label col-md-4" })
                 <div class="col-md-8">
-                    @Html.ListBoxFor(model => model._cAlarmIgnoreMask, Model._Enable_bit_MASK, new { @class = "form-control bsMultiselect", multiple = "multiple" })
+                    @Html.ListBoxFor(model => model._cAlarmIgnoreMask, EqUiWebUi.Areas.VASC.Models.VASCenums.Enable_bit_MASK_SelectList, new { @class = "form-control bsMultiselect", multiple = "multiple" })
                     @Html.ValidationMessageFor(model => model.cAlarmIgnoreMask, "", new { @class = "text-danger" })
                 </div>
             </div>
