--- a/EqUiWebUi/Areas/VASC/Views/c_controller_class/_Details.cshtml
+++ b/EqUiWebUi/Areas/VASC/Views/c_controller_class/_Details.cshtml
@@ -8,24 +8,100 @@
     <div class="alert-info">
     </div>
     <div class="panel-body">
-
-
-        <div class="alert">
-            <div id="c_variableGrid" class="mvc-grid"></div>
-        </div>
-
+        <div id="c_variableGrid" class="mvc-grid"></div>
     </div>
 </div>
 
-    <script>
-                //load c_variable grid for active selection.
-                        $('#c_variableGrid').mvcgrid({
-                            sourceUrl: '@Url.Action("_List","c_variable", new {enable_mask = Model.cVariableMask })',
-                            requestType: 'get', // Ajax grid request type
-                            reloadFailed: function (result) {
-                                $("#c_variableGrid").html("Error while loading!!!");
-                            }
-                         });
+<div class="panel panel-default">
+    <div class="panel-heading">
+        <h4 class="panel-title">c variable search</h4>
+        <span class="pull-right clickable"><i class="glyphicon glyphicon-chevron-up"></i></span>
+    </div>
+    <div class="alert-info">
+    </div>
+    <div class="panel-body">
+        <div id="c_variable_searchGrid" class="mvc-grid"></div>
+    </div>
+</div>
 
-                    console.log("hit");
-    </script>
+<div class="panel panel-default">
+    <div class="panel-heading">
+        <h4 class="panel-title">c error</h4>
+        <span class="pull-right clickable"><i class="glyphicon glyphicon-chevron-up"></i></span>
+    </div>
+    <div class="alert-info">
+    </div>
+    <div class="panel-body">
+        <div id="c_errorGrid" class="mvc-grid"></div>
+    </div>
+</div>
+
+<div class="panel panel-default">
+    <div class="panel-heading">
+        <h4 class="panel-title">c csv log</h4>
+        <span class="pull-right clickable"><i class="glyphicon glyphicon-chevron-up"></i></span>
+    </div>
+    <div class="alert-info">
+    </div>
+    <div class="panel-body">
+        <div id="c_csv_logGrid" class="mvc-grid"></div>
+    </div>
+</div>
+
+<div class="panel panel-default">
+    <div class="panel-heading">
+        <h4 class="panel-title">c device info</h4>
+        <span class="pull-right clickable"><i class="glyphicon glyphicon-chevron-up"></i></span>
+    </div>
+    <div class="alert-info">
+    </div>
+    <div class="panel-body">
+        <div id="c_device_infoGrid" class="mvc-grid"></div>
+    </div>
+</div>
+
+
+<script>
+    //load girds
+    $('#c_variableGrid').mvcgrid({
+      sourceUrl: '@Url.Action("_List","c_variable", new {enable_mask = Model.cVariableMask })',
+      requestType: 'get', // Ajax grid request type
+      reloadFailed: function (result) {
+         $("#c_variableGrid").html("Error while loading!!!");
+      }
+    });
+
+    $('#c_variable_searchGrid').mvcgrid({
+      sourceUrl: '@Url.Action("_List", "c_variable_search", new {enable_mask = Model.cVariableMask })',
+      requestType: 'get', // Ajax grid request type
+      reloadFailed: function (result) {
+          $("#c_variable_searchGrid").html("Error while loading!!!");
+      }
+    });
+
+    $('#c_errorGrid').mvcgrid({
+      sourceUrl: '@Url.Action("_List", "c_error", new {enable_mask = Model.cVariableMask })',
+      requestType: 'get', // Ajax grid request type
+      reloadFailed: function (result) {
+          $("#c_errorGrid").html("Error while loading!!!");
+      }
+    });
+
+    $('#c_csv_logGrid').mvcgrid({
+        sourceUrl: '@Url.Action("_List", "c_csv_log", new {enable_mask = Model.cVariableMask })',
+        requestType: 'get', // Ajax grid request type
+        reloadFailed: function (result) {
+            $("#c_csv_logGrid").html("Error while loading!!!");
+        }
+    });
+
+    $('#c_device_infoGrid').mvcgrid({
+        sourceUrl: '@Url.Action("_List", "c_device_info", new {enable_mask = Model.cVariableMask })',
+        requestType: 'get', // Ajax grid request type
+        reloadFailed: function (result) {
+            $("#c_device_infoGrid").html("Error while loading!!!");
+        }
+    });
+
+
+</script>
