--- a/EqUiWebUi/Areas/VASC/Views/c_device_info/_List.cshtml
+++ b/EqUiWebUi/Areas/VASC/Views/c_device_info/_List.cshtml
@@ -1,16 +1,18 @@
-﻿@model IQueryable<EqUiWebUi.Areas.VASC.Models.c_device_info> 
-    
+﻿@model List<EqUiWebUi.Areas.VASC.Models.c_device_info>
+
 @Html.Grid(Model).Named("c_device_info").Build(columns =>
-    {
-        columns.Add(c => c.id).Titled("id").InitialSort(GridSortOrder.Asc);
-        columns.Add(c => c.name).Titled("name");
-        columns.Add(c => c._Enable_bit).Titled("enable_bit");
-        columns.Add(c => c._Poll_Rate).Titled("Poll_Rate");
-        columns.Add(c => c._Insert_update).Titled("Insert_update");
-// columns.Add(c => c.URL).Titled("URL");
-columns.Add(c => c)
-                    .Titled("")
-                    .Encoded(false)
-                    .RenderedAs(c => @Html.ActionLink("Edit", "Edit", new { id = c.id })
-                    ).Filterable(false);
-                    }).Filterable(true).Sortable(true).Empty("Did not find anything").Css("table-hover")
+{
+    columns.Add(c => c.id).Titled("id").InitialSort(GridSortOrder.Asc);
+    columns.Add(c => c._Enable_bit).Titled("enable_bit");
+    columns.Add(c => c._Poll_Rate).Titled("Poll_Rate");
+    columns.Add(c => c._Insert_update).Titled("Insert_update");
+    columns.Add(c => c.name).Titled("name");
+    columns.Add(c => c)
+                        .Titled("")
+                        .Encoded(false)
+                        .RenderedAs(c => @Html.ActionLink("Edit", "Edit", new { id = c.id })
+                        ).Filterable(false);
+}).Filterable(true).Sortable(true).Pageable(pager =>
+{
+    pager.RowsPerPage = 10;
+}).Empty("Did not find anything").Css("table-hover")
