--- a/EqUiWebUi/Areas/VASC/Views/c_variable/Index.cshtml
+++ b/EqUiWebUi/Areas/VASC/Views/c_variable/Index.cshtml
@@ -24,21 +24,7 @@
 </p>
 
 
-@Html.Grid(Model).Named("c_controller_class").Build(columns =>
-{
-    columns.Add(c => c.id).Titled("id").InitialSort(GridSortOrder.Asc);
-    columns.Add(c => c.variable).Titled("variable");
-    columns.Add(c => c._Poll_Rate).Titled("_Poll_Rate");
-    columns.Add(c => c._Enable_bit).Titled("_Enable_bit");
-    columns.Add(c => c._Event_code).Titled("_Event_code");
-    columns.Add(c => c._SQL_Action).Titled("_SQL_Action"); //this should be multiselect!
-    columns.Add(c => c.rt_table).Titled("rt_table");
-    columns.Add(c => c)
-                    .Titled("")
-                    .Encoded(false)
-                    .RenderedAs(c => @Html.ActionLink("Edit", "Edit", new { id = c.id })
-                    ).Filterable(false);
-}).Filterable(true).Sortable(true).Empty("Did not find anything").Css("table-hover")
+@Html.AjaxGrid(Url.Action("_List"))
 
 @section scripts{
     <script>
