--- a/EqUiWebUi/Areas/VASC/Views/c_variable/_List.cshtml
+++ b/EqUiWebUi/Areas/VASC/Views/c_variable/_List.cshtml
@@ -3,9 +3,11 @@
 @Html.Grid(Model).Named("c_variable").Build(columns =>
 {
     columns.Add(c => c.id).Titled("id").InitialSort(GridSortOrder.Asc);
+    columns.Add(c => c._Enable_bit).Titled("enable_bit");
     columns.Add(c => c.variable).Titled("variable");
-    columns.Add(c => c._SQL_Action).Titled("_SQL_Action");
+    columns.Add(c => c._Poll_Rate).Titled("_Poll_Rate");
     columns.Add(c => c._Event_code).Titled("_Event_code");
+    columns.Add(c => c.sql_action).Titled("_SQL_Action"); //this should be multiselect!
     columns.Add(c => c.rt_table).Titled("rt_table");
     columns.Add(c => c)
                     .Titled("")
