--- a/EqUiWebUi/Areas/VASC/Views/c_variable_search/_List.cshtml
+++ b/EqUiWebUi/Areas/VASC/Views/c_variable_search/_List.cshtml
@@ -3,13 +3,14 @@
 @Html.Grid(Model).Named("c_variable_search").Build(columns =>
 {
     columns.Add(c => c.id).Titled("id").InitialSort(GridSortOrder.Asc);
+    columns.Add(c => c._Enable_bit).Titled("enable_bit");
     columns.Add(c => c.variable).Titled("variable");
-    columns.Add(c => c._SymbolTypes).Titled("_SymbolTypes"); //must check doc to make this enum
-columns.Add(c => c.datatype).Titled("datatype"); //idem
-columns.Add(c => c._Poll_Rate).Titled("_Poll_Rate");
-    columns.Add(c => c._Enable_bit).Titled("_Enable_bit");
+    columns.Add(c => c._Poll_Rate).Titled("_Poll_Rate");
     columns.Add(c => c._Insert_update).Titled("_Insert_update");
     columns.Add(c => c.rt_table).Titled("rt_table");
+    columns.Add(c => c._SymbolTypes).Titled("_SymbolTypes"); //must check doc to make this enum
+    columns.Add(c => c.datatype).Titled("datatype"); //idem
+
     columns.Add(c => c)
                     .Titled("")
                     .Encoded(false)
